--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 Debug/
+project/Debug/computational_structures_drivers.elf
+project/Debug/computational_structures_drivers.list
+project/Debug/computational_structures_drivers.map
+project/Debug/Core/Src/main.o
+project/Debug/Core/Src/ring_buffer.o
+project/Debug/Core/Src/stm32l4xx_hal_msp.o
+project/Debug/Core/Src/stm32l4xx_it.o
+project/Debug/Core/Src/subdir.mk
+project/Debug/Core/Src/syscalls.o
+project/Debug/Core/Src/sysmem.o
+project/Debug/Core/Src/system_stm32l4xx.o
+project/Debug/Core/Startup/startup_stm32l476rgtx.o
+project/Debug/Core/Startup/subdir.mk
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cortex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_exti.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ramfunc.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart_ex.o
+project/Debug/Drivers/STM32L4xx_HAL_Driver/Src/subdir.mk
+project/Debug/makefile
+project/Debug/sources.mk
