--- a/project/Debug/makefile
+++ b/project/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: computational_structures_drivers.elf secondary-outputs
 
 # Tool invocations
-computational_structures_drivers.elf computational_structures_drivers.map: $(OBJS) $(USER_OBJS) C:\Users\juang\OneDrive\Documentos\Estructuras\ Computacionales\drivers\Estructuras_Computacionales_Drivers\computational_structures_drivers\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "computational_structures_drivers.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\juang\OneDrive\Documentos\Estructuras Computacionales\drivers\Estructuras_Computacionales_Drivers\computational_structures_drivers\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="computational_structures_drivers.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+computational_structures_drivers.elf computational_structures_drivers.map: $(OBJS) $(USER_OBJS) D:\Universidad\Sexto\ semestre\Estructuras\ computacionales\Repositorios\Computational_Structures_2023_2_Drivers\Computational_Structures_course_2023_2_drivers\project\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "computational_structures_drivers.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Universidad\Sexto semestre\Estructuras computacionales\Repositorios\Computational_Structures_2023_2_Drivers\Computational_Structures_course_2023_2_drivers\project\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="computational_structures_drivers.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
